# model-magick

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt  sonar-project.properties
.github/workflows/: clang-tidy-review.yml  macos.yml  ubuntu.yml  windows.yml
apps/: CMakeLists.txt  main.cpp
src/model-magick/: CMakeLists.txt  GeneralizedWindingNumberCalculator.cpp  ImageWriter.cpp  MeshImporter.cpp  MeshStatCalculator.cpp  MeshStatsCalculator.cpp  importer.cpp
src/model-magick/include/model-magick/: ConstProvider.h  Consumer.h  GeneralizedWindingNumberCalculator.h  Image.h  ImageWriter.h  MeshImporter.h  MeshStatCalculator.h  MeshStatsCalculator.h  Mesh_rename.h  importer.h  mesh.h
tests/: CMakeLists.txt  test_ConstProvider.cpp  test_GeneralizedWindingNumber.cpp  test_ImageWriter.cpp  test_MeshImporter.cpp  test_MeshStatCalculator.cpp  test_MeshStatsCalculator.cpp  test_importer.cpp
tests/assets/: box.stl  opened-unit-box.stl  unit-box.stl
